<resources>

    <string name="app_name">C.D. Flash</string>
    <string name="action_settings">Ajustes</string>
    <string name="hello_world">Hello world!</string>
    <color name="fondo">#FEEFEF</color>
    <string name="drawer_open">abre</string>
    <string name="drawer_close">cierra</string>
    <string name="NoticiasGenerales">Noticias Generales</string>
    <string name="NoticiasAtletismo">Noticias Atletismo</string>
    <string name="NoticiasFutbol">Noticias Futbol</string>
    <string name="NoticiasBaloncesto">Noticias Baloncesto</string>
    <string name="Localiza">Localizaciones</string>
	<string name="Contacto">Contacto</string>
	<string name="Aviso">Aviso Legal</string>
	<string name="Ciudad">Ciudad</string>
	<string name="Calle">Calle</string>
	<string name="Numero">Número</string>	
	<string name="Enviar"> Enviar </string>
	<string name="NombreApell"> Nombre y Apellidos </string>
	<string name="Mensaje">Mensaje</string>
	<string name="TituloContacto">Conctacta</string>
	<string name="Bienvenido">Bienvenido</string>
	<string name="FotoToast">Logo</string>
	<string name="FotoFutbol">Emergencia Filipinas</string>
    <string name="Foto1">Foto Corredor</string>
    <string name="Foto2">Lazo Violeta</string>
     <string name="Foto3">Pelota</string>
     <string name="FotoCorredor">Corredor</string>
     <string name="FotoDKV"> DKV Juventut</string>
    <string name="TextoGeneral">Cuando llegue la primavera, el discípulo de Fiz honrará a su maestro y cambiará el tartán por el asfalto. "La pista quema mucho y hay demasiados atletas en Europa que pueden hacer 13'20" en 5.000. Creo que el maratón es más rentable, hay más hueco en el continente y puedo adaptarme bien. Es una apuesta para Río, mi sueño siempre ha sido ser olímpico", reconoce.

Antes se debutaba en la distancia de Filípides pasados los 30 años, pero Fernández cree que los tiempos han cambiado: "Yo estoy convencido de que se puede dar el salto antes". El suyo llegará en abril, probablemente en Viena, con un reto en la mente: "Hacer la mínima para acudir al Europeo de Zúrich".</string>
    <string name="TextoGeneral2">La FAB Cádiz se une a los múltiples actos que con motivo del día Internacional contra la Violencia de Género se conmemora el próximo lunes 25 de Noviembre y para ello en todos los encuentros tanto de categoría nacional como de provincial que se disputen esta jornada del 23 y 24 de Noviembre, todos los participantes (jugadores/as, técnicos, equipo arbitral y todo aquel que desee sumarse a esta iniciativa) lucirán en sus indumentarias el lazo conmemorativo de tal día de color violeta.</string>
    <string name="TextoGeneral3">El CD Sariñena empataba 0-0 en el campo de El Carmen con el Amorebieta en un partido en el que tuvo ocasiones para llevarse el triunfo. Nada más comenzar el partido el árbitro no señalaba un penalti cometido sobre el jugador monegrino Teto

El equipo se reponía de esa adversidad, y continuaba buscando el gol, que estuvo a punto de llegar en un tanto anulado y un larguero de los locales.</string>

    <string name="TextoAtletismo">Este fin de semana, en concreto el domingo tendremos participación de nuestros atletas en tres pruebas. Por un lado Algodonales y El Puerto de Santa María acaparan el interés del atletismo provincial, por otro lado, hasta Córdoba, donde se disputa la 29ª Edición de la Media Maratón de Córdoba se desplazarán Jose Ruiz Morales y Carlos Garrido.

En lo que respecta a la provincia,en el municipio de Algodonales de la Sierra de Cádiz se desarrollará la VII Carrera Urbana Sierra de Lijar, que saldrá a las 10.00 horas desde la Plaza de la Constitución y contará con un recorrido de 9.300 metros, hasta allí se desplazará Jesús Sánchez Morales.

Y a la misma hora tendrá lugar en El Puerto de Santa María, la XIX Carrera Popular Puerto Menesteo, cita que se iniciará y finalizará en la Ciudad Deportiva portuense. En la prueba absoluta participaremos con 41 atletas, mientras que en las categorías base tendremos tambien una alta representación con casi 25 atletas inscritos.</string>

    <string name="TextoBaloncesto">El primer equipo senior femenino del Club Baloncesto Portuense, DKV El Puerto, cedió el liderato del grupo tras perder en el pabellón municipal portuense ante el ADEBA de Córdoba por 60-80.

Las portuenses no mostraron su mejor cara ante su público, no encontrándose cómodas sobre la cancha y siendo superadas por un rival que imprimió rapidez al partido sin que las locales pudieran seguirle.

Esta derrota deja a las portuenses en tercera posición debiendo descansar la próxima semana que servirá para cargar pilas y afrontar con fuerza el tramo final de la primera vuelta.</string>
    
    <string name="TextoFutbol">El Fútbol Andaluz, como siempre en casos de solidaridad urgente, ha empezado a movilizarse con la llamada de la Real Federación Andaluza de Fútbol, que ha abierto una página de donaciones de emergencia para Filipinas a través de UNICEF. Las colaboraciones están llegando con celeridad y el RETO DEL FÚTBOL ANDALUZ es llegar a los 13.000 euros de colaboración de manera inmediata, con ayuda de clubes, entrenadores, árbitros y aficionados en general.

Ya puedes aportar de forma anónima o nominal tu donación en la página de la RFAF en UNICEF, bajo el título del RETO DEL FÚTBOL ANDALUZ, o enviando la palabra “RETO” al 28028. Los miles de damnificados de Filipinas esperan tu ayuda.</string>
	
    <string name="TextoAviso">En esta web, propiedad de JAMVID SYSTEMS, aseguramos la total protección de los datos de carácter personal proporcionados por nuestros usuarios. 

“De conformidad con lo dispuesto en la Ley Orgánica 15/1999 de Protección de Datos, le informamos que los datos personales facilitados a través de los formularios de esta web o mediante mensajes de correo electrónico, podrán ser incorporados en nuestros ficheros, en concreto el fichero WEB, y serán tratados de manera automatizada. Mediante el envío de los formularios existentes en esta web, el remitente da su consentimiento para ser incluido en los mencionados ficheros. Así mismo, le comunicamos que desde esta web se podrán recoger direcciones IP de los usuarios, las cuales serán igualmente tratadas de acuerdo a la normativa vigente. Todos los ficheros han sido debidamente registrados en la Agencia Española de Protección de Datos. 

Sus datos podrán ser cedidos, siempre protegiendo los datos adecuadamente, a: administración tributaria, y otros órganos de la administración pública, y notarios y procuradores, y bancos, cajas de ahorros y cajas rurales, y administración pública con competencia en la materia de Gestión de Recursos Deportivos respetará en todo momento la confidencialidad de sus datos, según conformidad con la Ley Orgánica 15/1999, de 13 de diciembre, sobre Protección de Datos de Carácter Personal (LOPD). 

En cualquier momento puede usted ejecutar sus derechos de oposición, acceso, rectificación, cancelación y oposición de su autorización sin efectos retroactivos en los términos especificados en la Ley Orgánica 15/1999, de Protección de Datos de Carácter Personal, conforme al procedimiento legalmente establecido. Estos derechos podrán ser ejercidos dirigiéndose al correo electrónico. </string>
	
</resources>
