<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"  android:layout_height="wrap_content"
    android:scrollbars="vertical"
    >

<LinearLayout    
	    android:orientation="vertical"
	    android:layout_width="wrap_content" 
		android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/LblGeneral"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/NoticiasGenerales"
        android:textColor="#FD2526"
        android:textSize="20sp"
        android:textStyle="bold" />

    			<TextView
    			    android:id="@+id/LblTextoGeneral"
    			    android:layout_width="match_parent"
    			    android:layout_height="match_parent"
    			    android:text="@string/TextoGeneral" />

				<ImageView
			    android:id="@+id/imageView1"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:contentDescription="@string/Foto1"
			    android:src="@drawable/media" />

				<TextView
				    android:id="@+id/LblTextoGeneral2"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/TextoGeneral2" />
				<ImageView
			    android:id="@+id/imageView2"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:contentDescription="@string/Foto2"
			    android:src="@drawable/lazo_violeta" />
				
								<TextView
				    android:id="@+id/LblTextoGeneral3"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/TextoGeneral3" />
								
									<ImageView
			    android:id="@+id/imageView3"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:contentDescription="@string/Foto3"
			    android:src="@drawable/pelota" />
				
				

	</LinearLayout>
	</ScrollView>
