<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"  android:layout_height="wrap_content"
    android:scrollbars="vertical"
    >
<!-- Prueba de Commit -->
<LinearLayout    
	    android:orientation="vertical"
	    android:layout_width="wrap_content" 
		android:layout_height="wrap_content" >
	
    			<TextView android:id="@+id/LblGeneral" 
			        android:layout_width="match_parent"
			        android:layout_height="44dp"
			        android:gravity="center"
			        android:text="@string/NoticiasFutbol"
			        android:textColor="#FD2526"
			        android:textSize="20sp"
			        android:textStyle="bold"
			    />

			<TextView
			    android:id="@+id/LblTextoFutboll"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:text="@string/TextoFutbol" />
			
			<ImageView
			    android:id="@+id/imageViewF"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:contentDescription="@string/FotoFutbol"
			    android:src="@drawable/filipinas" />

</LinearLayout>
	</ScrollView>
