<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"  android:layout_height="wrap_content"
    android:scrollbars="vertical"
    >

<LinearLayout    
	    android:orientation="vertical"
	    android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:background="#FEEFEF"
		android:gravity="center">
	
    			<TextView android:id="@+id/LblGeneral" 
		        android:layout_width="match_parent"
		        android:layout_height="44dp"
		        android:gravity="center"
		        android:text="@string/NoticiasAtletismo"
		        android:textColor="#FD2526"
		        android:textSize="20sp"
		        android:textStyle="bold"
			    />

			<TextView
			    android:id="@+id/LblTextoAtletismo"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:textColor="#000000"
			    android:text="@string/TextoAtletismo" />

			<ImageView
			    android:id="@+id/imageView3"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="20dp"
			    android:contentDescription="@string/FotoCorredor"
			    android:src="@drawable/corredor" />
			
			<LinearLayout
				android:layout_width="280dp"
				android:layout_height="1dp"
				android:background="#FD2526"
				android:layout_marginTop="20dp"
				android:orientation="horizontal"
					/>

</LinearLayout>
	</ScrollView>
